echoserver/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: 'apis-dev'
    alb.ingress.kubernetes.io/wafv2-acl-arn: 'arn:aws:wafv2:us-west-1:526251186266:regional/webacl/PublicisGroupeIP4Access/79777cfb-078f-41ce-b0f5-b2bd079a9dca'
spec:
  ingressClassName: alb
  rules:
    - host: echo.apis-dev.cjpowered.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 80
